gnome.yelp(meson.project_name(),
  sources: [
    'commands_bookmarks.page',
    'commands_braille.page',
    'commands_chat.page',
    'commands_controlling_orca.page',
    'commands_debugging.page',
    'commands_find.page',
    'commands_flat_review.page',
    'commands_live_regions.page',
    'commands_mouse.page',
    'commands.page',
    'commands_profiles.page',
    'commands_reading.page',
    'commands_speech_settings.page',
    'commands_structural_navigation.page',
    'commands_table.page',
    'commands_time_date_notifications.page',
    'commands_where_am_i.page',
    'howto_bookmarks.page',
    'howto_documents.page',
    'howto_flat_review.page',
    'howto_forms.page',
    'howto_key_bindings.page',
    'howto_keyboard_layout.page',
    'howto_learn_modes.page',
    'howto_live_regions.page',
    'howto_mouse_review.page',
    'howto_notifications.page',
    'howto_orca_find.page',
    'howto_profiles.page',
    'howto_setting_up_orca.page',
    'howto_structural_navigation.page',
    'howto_tables.page',
    'howto_text_attributes.page',
    'howto_the_orca_modifier.page',
    'howto_toggling_caps_lock.page',
    'howto_whereami.page',
    'index.page',
    'introduction.page',
    'preferences_braille.page',
    'preferences_chat.page',
    'preferences_general.page',
    'preferences_introduction.page',
    'preferences_key_bindings.page',
    'preferences_key_echo.page',
    'preferences.page',
    'preferences_pronunciation.page',
    'preferences_speech.page',
    'preferences_spellcheck.page',
    'preferences_table_navigation.page',
    'preferences_text_attributes.page',
    'preferences_voice.page',
    'preferences_web.page',
  ],
  media: [
    'figures/orca-logo.svg',
  ],
)
