hicolor_dir = get_option('datadir') / 'icons' / 'hicolor'

install_data(
  'orca-16x16.png',
  install_dir: hicolor_dir / '16x16' / 'apps',
  rename: 'orca.png',
)

install_data(
  'orca-22x22.png',
  install_dir: hicolor_dir / '22x22' / 'apps',
  rename: 'orca.png',
)

install_data(
  'orca-24x24.png',
  install_dir: hicolor_dir / '24x24' / 'apps',
  rename: 'orca.png',
)

install_data(
  'orca-32x32.png',
  install_dir: hicolor_dir / '32x32' / 'apps',
  rename: 'orca.png',
)

install_data(
  'orca-48x48.png',
  install_dir: hicolor_dir / '48x48' / 'apps',
  rename: 'orca.png',
)

install_data(
  'orca-scalable.svg',
  install_dir: hicolor_dir / 'scalable' / 'apps',
  rename: 'orca.svg',
)

install_data(
  'orca-symbolic.svg',
  install_dir: hicolor_dir / 'symbolic' / 'apps',
)
