orca_SCRIPTS = \
	orca

orcadir=$(bindir)
uidir=$(datadir)/orca/ui
gfxdir=$(datadir)/orca/gfx

orca_python_PYTHON = \
	__init__.py \
	acss.py \
	ax_collection.py \
	ax_object.py \
	ax_selection.py \
	ax_utilities.py \
	ax_utilities_role.py \
	ax_utilities_state.py \
	bookmarks.py \
	braille.py \
	braille_generator.py \
	braille_rolenames.py \
	brlmon.py \
	brltablenames.py \
	caret_navigation.py \
	chat.py \
	chnames.py \
	cmdnames.py \
	colornames.py \
	common_keyboardmap.py \
	debug.py \
	desktop_keyboardmap.py \
	event_manager.py \
	eventsynthesizer.py \
	find.py \
	flat_review.py \
	formatting.py \
	generator.py \
	guilabels.py \
	input_event.py \
	keybindings.py \
	keynames.py \
	label_inference.py \
	laptop_keyboardmap.py \
	liveregions.py \
	logger.py \
	mathsymbols.py \
	messages.py \
	mouse_review.py \
	notification_messages.py \
	object_properties.py \
	orca.py \
	orca_gtkbuilder.py \
	orca_gui_find.py \
	orca_gui_commandlist.py \
	orca_gui_navlist.py \
	orca_gui_prefs.py \
	orca_gui_profile.py \
	orca_i18n.py \
	orca_state.py \
	phonnames.py \
	orca_platform.py \
	pronunciation_dict.py \
	punctuation_settings.py \
	script.py \
	script_manager.py \
	script_utilities.py \
	settings.py \
	settings_manager.py \
	sound.py \
	sound_generator.py \
	speech.py \
	spellcheck.py \
	speechdispatcherfactory.py \
	speech_generator.py \
	speechserver.py \
	structural_navigation.py \
	text_attribute_names.py \
	tutorialgenerator.py

orca_pythondir=$(pkgpythondir)

SUBDIRS = \
        scripts \
        backends

ui_DATA = \
	orca-find.ui \
	orca-setup.ui

EXTRA_DIST = \
	$(ui_DATA) \
	$(gfx_DATA)

CLEANFILES = \
	orca \
	orca_bin.py \
	orca_i18n.py \
	orca_platform.py

DISTCLEANFILES = \
	orca \
	orca_bin.py \
	orca_i18n.py \
	orca_platform.py
