[package]
name = "MathCatForPython"
version = "0.7.6-beta.5"
authors = ["Neil Soiffer <soiffer@alum.mit.edu>"]
edition = "2024"
resolver = "2"

[lib]
name = "libmathcat_py"
crate-type = ["cdylib"]

[dependencies.mathcat]
version = "=0.7.6-beta.5"

[dependencies.pyo3]
version = "0.29"
features = ["extension-module", "abi3"]

[build-dependencies]
zip = { version = "8.5", default-features = false, features = ["bzip2"] }
mathcat = {version = "=0.7.6-beta.5", features = ["include-zip"]}

[profile.release]
lto = true
