orca_pathdir=$(pyexecdir)

orca_python_PYTHON = \
	__init__.py \
	acroread.py \
	Evolution.py \
	gaim.py \
	gcalctool.py \
	gdmlogin.py \
	gedit.py \
	gnome_segv2.py \
	gnome-mud.py \
	gnome-keyring-ask.py \
	gnome-panel.py \
	gnome-power-manager.py \
	gnome-search-tool.py \
	gnome-terminal.py \
	gnome-window-properties.py \
	liferea.py \
	metacity.py \
	Mozilla.py \
	nautilus.py \
	planner.py \
	self_voicing.py \
	StarOffice.py \
	Thunderbird.py \
	users-admin.py

orca_pythondir=$(pyexecdir)/orca/scripts

