orca_pathdir=$(pyexecdir)

orca_python_PYTHON = \
	__init__.py \
	acroread.py \
	Evolution.py \
	gaim.py \
	gcalctool.py \
	gdmlogin.py \
	gedit.py \
	gnome_segv2.py \
	gnome-keyring-ask.py \
	gnome-mud.py \
	gnome-panel.py \
	gnome-screensaver-dialog.py \
	gnome-search-tool.py \
	gnome-system-monitor.py \
	gnome-terminal.py \
	gnome-window-properties.py \
	liferea.py \
	metacity.py \
	Mozilla.py \
	nautilus.py \
	notification-daemon.py \
	planner.py \
	rhythmbox.py \
	self_voicing.py \
	StarOffice.py \
	Thunderbird.py

orca_pythondir=$(pyexecdir)/orca/scripts

