SUBDIRS = gtk2 gtk3 qt

orca_pathdir=$(pyexecdir)

orca_python_PYTHON = \
	__init__.py \
	abstract_widget.py \
	abstract_model.py \
	box.py \
	checkbox.py \
	entry.py \
	frame.py \
	label.py \
	message_dialog.py \
	push_button.py \
	radio_button.py \
	slider.py \
	spinner.py \
	status_bar.py \
	tabbed_widget.py \
	table.py \
	tree.py \
	tree_model.py \
	text_combo_box.py \
	window.py

orca_pythondir=$(pyexecdir)/orca/gui/toolkits
