SUBDIRS = \
	Banshee \
	Eclipse \
	ekiga \
	empathy \
	epiphany \
	evince \
	evolution \
	gajim \
	gcalctool \
	gedit \
	gnome-documents \
	gnome-keyring-ask \
	gnome-panel \
	gnome-screensaver-dialog \
	gnome-shell \
	gnome-search-tool \
	gnome-window-properties \
	Instantbird \
	notification-daemon \
	notify-osd \
	Mozilla \
	pidgin \
	rhythmbox \
	soffice \
	SeaMonkey \
	smuxi-frontend-gnome \
	Thunderbird \
	xfwm4

orca_python_PYTHON = \
	__init__.py

orca_pythondir=$(pkgpythondir)/scripts/apps

