SUBDIRS = \
	Banshee \
	Eclipse \
	empathy \
	epiphany \
	evince \
	evolution \
	gajim \
	gcalctool \
	gedit \
	gnome-documents \
	gnome-shell \
	gnome-search-tool \
	kwin \
	notification-daemon \
	notify-osd \
	Mozilla \
	pidgin \
	rhythmbox \
	soffice \
	SeaMonkey \
	smuxi-frontend-gnome \
	Thunderbird \
	xfwm4

orca_python_PYTHON = \
	__init__.py

orca_pythondir=$(pkgpythondir)/scripts/apps

