subdir('evolution')
subdir('gajim')
subdir('gedit')
subdir('gnome-shell')
subdir('kwin')
subdir('notification-daemon')
subdir('pidgin')
subdir('soffice')
subdir('SeaMonkey')
subdir('smuxi-frontend-gnome')
subdir('Thunderbird')
subdir('xfwm4')

lib_sources = [
  '__init__.py',
]

python3.install_sources(
  lib_sources,
  subdir: meson.project_name() / 'scripts' / 'apps'
)
