orca_pathdir=$(pyexecdir)

orca_python_PYTHON = \
	__init__.py \
	box.py \
	checkbox.py \
	entry.py \
	frame.py \
	label.py \
	message_dialog.py \
	push_button.py \
	radio_button.py \
	slider.py \
	spinner.py \
	status_bar.py \
	tabbed_widget.py \
	table.py \
	text_combo_box.py \
	tree.py \
	tree_model.py \
	toolkit.py \
	window.py

orca_pythondir=$(pyexecdir)/orca/gui/toolkits/gtk3
